# Open_Env-Exchange_rate

./: Dockerfile  Prevalidate.py  README.md  app.py  env.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
